--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
                                 Hi there 👋
                             </p>
                             <p class="fs-1 fw-bold animate__animated animate__fadeInRight">
-                                My name is Julius Odede
+                                My name is Temitope
                             </p>
                             <div style="width: max-content;">
                                 <div class="fs-3 fw-bold typewriter">
-                                    > <span>Lecturer and Researcher</span>
+                                    > <span>AI Masters Student and Maths Tutor</span>
                                 </div>
                             </div>
                         </div>
