--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             </p>
                             <div style="width: max-content;">
                                 <div class="fs-3 fw-bold typewriter">
-                                    > <span>AI Masters Student and Maths Tutor</span>
+                                    > <span>Student and Maths Tutor</span>
                                 </div>
                             </div>
                         </div>
